scripts/nullaway/wpi/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8.txt
../wpi/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/fsm/FiniteStateMachine.java:24: error: [NullAway] enhanced-for expression matrix.getPossibleStates(currentState) is @Nullable
        for (State possibleState : matrix.getPossibleStates(currentState)) {
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationStack.java:78: error: [NullAway] dereferenced expression ((AbstractBinaryOperator) operator) is @Nullable
        while (isOperatorOnTheTop() && ((operatorStack.peek().compareTo(operator) > 0) || (operatorStack.peek().compareTo(operator) > -1 && ((AbstractBinaryOperator) operator).isLeftAssociative()))) {
                                                                                                                                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationStack.java:81: error: [NullAway] passing @Nullable parameter 'operator' where @NonNull is required
        operatorStack.push(operator);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url2d0aeba8a7_kobantser_Calculator_tgz-pJ8-com_teamdev_students_calculator_impl_StateMachineCalculatorJ8/src/com/teamdev/students/calculator/impl/EvaluationStack.java:126: error: [NullAway] passing @Nullable parameter 'function' where @NonNull is required
        functionStack.push(function);
                           ^
    (see http://t.uber.com/nullaway )
4 errors
